--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
 </head>
 
 <body>
-    <table id="field">
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-    <script src="script.js"></script>
+    <div class="wrapper">
+        <div class="winner" id="winner">
+            <span class="winner__text"></span>
+        </div>
+        <table id="field" class="field">
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+        <script src="script.js"></script>
+    </div>
 </body>
 
 </html>
