--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <div class="wrapper">
         <div class="winner" id="winner">
+            <div class="close" id="close">
+                <img src="icons8-close-window-64.png" alt="" class="winner__img">
+            </div>
+            <div class="winner__text" id="text"></div>
             <span class="winner__text"></span>
         </div>
         <table id="field" class="field">
